# 32blit-a-maze

./: .gitignore  CMakeLists.txt  README.md  amaze.cpp  assets.yml  game.cpp  metadata.yml
demo/: amaze.js  amaze.wasm
docs/: amaze.js  amaze.wasm  index.html
entities/: Bomb.cpp  Bomb.h  Player.cpp  Player.h  Viewport.cpp  Viewport.h
gamemap/: GameMap.cpp  GameMap.h  Tile.cpp  Tile.h
mazegen/: Cell.cpp  Cell.h  Direction.cpp  Direction.h  Distances.cpp  Distances.h  Maze.cpp  Maze.h  MazeGen.cpp  MazeGen.h
states/: Game.cpp  Game.h  GameOver.cpp  GameOver.h  MainMenu.cpp  MainMenu.h
